Refactored changes to DarCollectionService - passing a list of datasetIds to filter on to addDatasetsToCollections, where the intersection is used to add datasetIds. Renamed the variable to be more clear about what it is, and passing in List.of() instead of nulls so that we do not have to filter nulls. Added documentation for the addDatasetsToCollections function.