@@ -65,7 +65,7 @@ public class DarCollectionService {
   }
 
   public List<DarCollection> getAllCollections() {
-    return addDatasetsToCollections(darCollectionDAO.findAllDARCollections(), null);
+    return addDatasetsToCollections(darCollectionDAO.findAllDARCollections(), List.of());
   }
 
   public List<DarCollection> getCollectionsForUserByRoleName(User user, String roleName) {
@@ -112,11 +112,13 @@ public class DarCollectionService {
     List<Integer> collectionIds = dacIds.isEmpty() ?
         Collections.emptyList() :
         darCollectionDAO.findDARCollectionIdsByDacIds(dacIds);
-    List<Dataset> userDatasets = filterByUserDacDatasets ?
-        datasetDAO.findDatasetsByAuthUserEmail(user.getEmail()) :
+    List<Integer> userDatasetsIds = filterByUserDacDatasets ?
+        datasetDAO.findDatasetsByAuthUserEmail(user.getEmail()).stream()
+                .map(d -> d.getDataSetId())
+                .collect(Collectors.toList()) :
         Collections.emptyList();
     if (!collectionIds.isEmpty()) {
-      return addDatasetsToCollections(darCollectionDAO.findDARCollectionByCollectionIds(collectionIds), userDatasets);
+      return addDatasetsToCollections(darCollectionDAO.findDARCollectionByCollectionIds(collectionIds), userDatasetsIds);
     }
     return Collections.emptyList();
   }
@@ -135,14 +137,14 @@ public class DarCollectionService {
     }
     List<Integer> collectionIds = darCollectionDAO.findDARCollectionIdsByInstitutionId(user.getInstitutionId());
     if (!collectionIds.isEmpty()) {
-      return addDatasetsToCollections(darCollectionDAO.findDARCollectionByCollectionIds(collectionIds), null);
+      return addDatasetsToCollections(darCollectionDAO.findDARCollectionByCollectionIds(collectionIds), List.of());
     }
     return Collections.emptyList();
   }
 
   public List<DarCollection> getCollectionsForUser(User user) {
     List<DarCollection> collections = darCollectionDAO.findDARCollectionsCreatedByUserId(user.getDacUserId());
-    return addDatasetsToCollections(collections, null);
+    return addDatasetsToCollections(collections, List.of());
   }
 
   /*
@@ -202,7 +204,7 @@ public class DarCollectionService {
         collections = darCollectionDAO.getFilteredListForResearcher(sortField, sortOrder, user.getDacUserId(), filterTerm);
     }
 
-    return addDatasetsToCollections(collections, null);
+    return addDatasetsToCollections(collections, List.of());
   }
 
   private List<Integer> getDacIdsFromUser (User user) {
@@ -245,7 +247,7 @@ public class DarCollectionService {
     if (Objects.isNull(collection)) {
       throw new NotFoundException("Collection with the reference id of " + referenceId + " was not found");
     }
-    List<DarCollection> populatedCollections = addDatasetsToCollections(Collections.singletonList(collection), null);
+    List<DarCollection> populatedCollections = addDatasetsToCollections(Collections.singletonList(collection), List.of());
     return populatedCollections.stream().findFirst().orElse(null);
   }
 
@@ -254,11 +256,21 @@ public class DarCollectionService {
     if (Objects.isNull(collection)) {
       throw new NotFoundException("Collection with the collection id of " + collectionId + " was not found");
     }
-    List<DarCollection> populatedCollections = addDatasetsToCollections(Collections.singletonList(collection), null);
+    List<DarCollection> populatedCollections = addDatasetsToCollections(Collections.singletonList(collection), List.of());
     return populatedCollections.stream().findFirst().orElse(null);
   }
 
-  public List<DarCollection> addDatasetsToCollections(List<DarCollection> collections, List<Dataset> userDatasets) {
+  // This method could be a lot simpler if we passed a list of IDs to filter instead of full datasets.
+  // If there are any ids, then this method will filter the Collection Datasets by those ids.
+  // What that lets you do is stop checking for null and also to not explicitly pass nulls as arguments to this method.
+  /**
+   * Iterate through a set of collections and add relevant datasets.
+   *
+   * @param collections  The list of DarCollections to iterate over.
+   * @param filterDatasetIds An optional list of Dataset Ids used to filter down the datasets for the collections
+   * @return List<DarCollection>
+   */
+  public List<DarCollection> addDatasetsToCollections(List<DarCollection> collections, List<Integer> filterDatasetIds) {
     // get datasetIds from each DAR from each collection
     List<Integer> datasetIds = collections.stream()
       .map(d-> d.getDars().values())
@@ -267,12 +279,11 @@ public class DarCollectionService {
       .flatMap(Collection::stream)
       .collect(Collectors.toList());
     if(!datasetIds.isEmpty()) {
-      // gets all datasets that should belong to the collection
-      Set<Dataset> datasets = (Objects.nonNull(userDatasets)) ?
-          userDatasets.stream()
-              .filter(d -> datasetIds.contains(d.getDataSetId()))
-              .collect(Collectors.toSet()) :
-              datasetDAO.findDatasetWithDataUseByIdList(datasetIds);
+      // if userDatasetIds has values, get the intersection between that and datasetIds
+      if (!filterDatasetIds.isEmpty()) {
+        datasetIds.retainAll(filterDatasetIds);
+      }
+      Set<Dataset> datasets = datasetDAO.findDatasetWithDataUseByIdList(datasetIds);
       Map<Integer, Dataset> datasetMap = datasets.stream()
           .collect(Collectors.toMap(Dataset::getDataSetId, Function.identity()));
 
